--- a/src/components/Admin/Welcome/Style/-Custom.scss
+++ b/src/components/Admin/Welcome/Style/-Custom.scss
@@ -9,8 +9,16 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    .row_flag
+    {
+        .title
+        {
+            color:white;
+        }
+    }
     .btn_continue
     {
+        margin-top:85px;
         padding: 8px 28px 8px 28px;
         background-color: white;
         border: 2px solid #333F48;
@@ -24,10 +32,11 @@
         font-weight: 600;
         transition :.5s;
     }
-    .title
+    ._title
     {
         color: white;
-        margin-top: 168px;
+        color:white;
+        margin-top: 80px;
     }
     .title_welcome
     {
