--- a/src/components/Admin/Welcome/Style/-Custom.scss
+++ b/src/components/Admin/Welcome/Style/-Custom.scss
@@ -18,6 +18,7 @@
     }
     .btn_continue
     {
+        border: none;
         margin-top:85px;
         padding: 8px 28px 8px 28px;
         background-color: white;
@@ -36,7 +37,7 @@
     {
         color: white;
         color:white;
-        margin-top: 80px;
+        margin-top: 137px;
     }
     .title_welcome
     {
