--- a/src/components/Admin/Resume/Style/-Custom.scss
+++ b/src/components/Admin/Resume/Style/-Custom.scss
@@ -15,3 +15,47 @@
     font-weight: 600;
     transition :.5s;
 }
+
+
+h6.lined {
+  overflow: hidden;
+  text-align: center;
+  letter-spacing: -1px;
+  font-weight: 100;
+}
+
+h6.lined:before,
+h6.lined:after {
+  background-color: #000;
+  content: "";
+  display: inline-block;
+  height: 1px;
+  position: relative;
+  vertical-align: middle;
+  width: 30%;
+  letter-spacing: -1px;
+  font-weight: 100;
+}
+
+h6.lined:before {
+  right: 0.5em;
+  margin-left: -50%;
+}
+
+h6.lined:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+
+.btn {
+    border-radius: 0px;
+}
+
+.btn-primary {
+    background-color: #007AB9;
+}
+
+.btn-primary:hover {
+    transition:.5s;
+    opacity : .5;
+}
